# kbeastpy

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/settings/: Accelerator.xml  settings.properties  test.db
.github/workflows/: tests.yml
examples/: client.py  readlog.py
src/kbeastpy/: __init__.py  cli.py  kbeast.py  logreader.py  msg.py
tests/: test_kbeast_client.py  test_logreader.py  utils.py
