[project]
name = "kbeastpy"
version = "0.1.0"
description = "kbeastpy"
readme = "README.md"
authors = [
    { name = "Shinya Sasaki", email = "shinya.sasaki@kek.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "confluent-kafka>=2.11.1",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[project.scripts]
kbeastpy = "kbeastpy.cli:cli"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
