[project]
name = "kbeastpy"
version = "0.1.0"
description = "kbeastpy"
readme = "README.md"
authors = [{ name = "Shinya Sasaki", email = "shinya.sasaki@kek.jp" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "confluent-kafka>=2.11.1",
    "elasticsearch==8.19.0",
    "pydantic>=2.11.9",
]

[project.scripts]
kbeastpy = "kbeastpy.cli:cli"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-mock>=3.14.1", "tox-uv>=1.28.0"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "3.11"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
